--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ attrs==23.1.0
 blinker==1.6.3
 Brotli==1.1.0
 browser-cookie3==0.19.1
+cachetools==5.3.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.0
@@ -17,6 +18,9 @@ Flask==3.0.0
 Flask-Cors==4.0.0
 frozenlist==1.4.0
 g4f==0.1.6.6
+google-auth==2.23.3
+google-auth-oauthlib==1.1.0
+gspread==5.11.3
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -32,8 +36,13 @@ lxml==4.9.3
 lz4==4.3.2
 MarkupSafe==2.1.3
 multidict==6.0.4
+numpy==1.26.1
+oauthlib==3.2.2
+pandas==2.1.1
 Pillow==10.1.0
 pip-autoremove==0.10.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 pycryptodome==3.19.0
 pycryptodomex==3.18.0
@@ -41,11 +50,16 @@ pydantic==1.10.9
 PyExecJS==1.5.1
 pyjsparser==2.7.1
 PySocks==1.7.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 socksio==1.0.0
 typing_extensions==4.8.0
+tzdata==2023.3
 tzlocal==5.1
 urllib3==2.0.6
 websockets==11.0.3
