feat: unify config with env variables using dotenv

--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ PyExecJS==1.5.1
 pyjsparser==2.7.1
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
