--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: CI
 
 on:
   push:
@@ -13,14 +13,14 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build_test:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4.7.1
       with:
         python-version: "3.11"
     - name: Install dependencies
@@ -37,3 +37,4 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+#    - name: Test secrets
