--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ httpcore==0.18.0
 httpx==0.25.0
 hyperframe==6.0.1
 idna==3.4
+iniconfig==2.0.0
 instagrapi==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -38,9 +39,11 @@ MarkupSafe==2.1.3
 multidict==6.0.4
 numpy==1.26.1
 oauthlib==3.2.2
+packaging==23.2
 pandas==2.1.1
 Pillow==10.1.0
 pip-autoremove==0.10.0
+pluggy==1.3.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
@@ -50,6 +53,7 @@ pydantic==1.10.9
 PyExecJS==1.5.1
 pyjsparser==2.7.1
 PySocks==1.7.1
+pytest==7.4.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
