--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,6 +17,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      USERNAME: ${{ secrets.USERNAME }}
+      PASSWORD: ${{ secrets.PASSWORD }}
+      PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+      SHEETS_JSON: ${{ secrets.SHEETS_JSON }}
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.11
@@ -28,6 +34,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Include secrets
+      run: |
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,4 +46,5 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+
 #    - name: Test secrets
