--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,6 +14,7 @@ env:
   PASSWORD: ${{ secrets.PASSWORD }}
   PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
   SHEETS_JSON: ${{ secrets.SHEETS_JSON }}
+  GMAIL_JSON: ${{ secrets.GMAIL_JSON }}
 
 permissions:
   contents: read
