--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 anyio==4.0.0
 async-timeout==4.0.3
 attrs==23.1.0
+beautifulsoup4==4.12.2
 blinker==1.6.3
 Brotli==1.1.0
 browser-cookie3==0.19.1
@@ -18,13 +19,18 @@ Flask==3.0.0
 Flask-Cors==4.0.0
 frozenlist==1.4.0
 g4f==0.1.6.6
+google-api-core==2.12.0
+google-api-python-client==2.104.0
 google-auth==2.23.3
+google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
+googleapis-common-protos==1.61.0
 gspread==5.11.3
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 httpcore==0.18.0
+httplib2==0.22.0
 httpx==0.25.0
 hyperframe==6.0.1
 idna==3.4
@@ -38,12 +44,14 @@ lz4==4.3.2
 MarkupSafe==2.1.3
 multidict==6.0.4
 numpy==1.26.1
+oauth2client==4.1.3
 oauthlib==3.2.2
 packaging==23.2
 pandas==2.1.1
 Pillow==10.1.0
 pip-autoremove==0.10.0
 pluggy==1.3.0
+protobuf==4.24.4
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycparser==2.21
@@ -52,6 +60,7 @@ pycryptodomex==3.18.0
 pydantic==1.10.9
 PyExecJS==1.5.1
 pyjsparser==2.7.1
+pyparsing==3.1.1
 PySocks==1.7.1
 pytest==7.4.2
 python-dateutil==2.8.2
@@ -60,12 +69,15 @@ pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+simplegmail==4.1.1
 six==1.16.0
 sniffio==1.3.0
 socksio==1.0.0
+soupsieve==2.5
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.1
+uritemplate==4.1.1
 urllib3==2.0.6
 websockets==11.0.3
 Werkzeug==3.0.0
