--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -14,6 +14,7 @@ env:
   PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
   SHEETS_JSON: ${{ secrets.SHEETS_JSON }}
   GMAIL_JSON: ${{ secrets.GMAIL_JSON }}
+  VERIFICATION_EMAIL: ${{ secrets.VERIFICATION_EMAIL }}
 
 jobs:
   cron_build:
