--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -3,14 +3,12 @@
 #
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
-
-**/secrets
 **/.DS_Store
 **/__pycache__
 **/.venv
 **/.classpath
 **/.dockerignore
-**/.env
+<!-- **/.env ==> I actually want the envfile to be copied for the build -->
 **/.git
 **/.gitignore
 **/.project
