--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,7 +11,7 @@ groq = "^0.11.0"
 python-dotenv = "^1.0.1"
 pillow = "^10.4.0"
 requests = "^2.32.3"
-fastapi = "^0.115.0"
+fastapi = {extras = ["all"], version = "^0.115.0"}
 pydantic = "2.7.1"
 instagrapi = "^2.1.2"
 uvicorn = "^0.31.0"
