--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "framer-motion": "^11.11.4",
+    "pnpm": "^9.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
